# AndroidNDKMD5Signature

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: md5.cpp  native-lib.cpp
app/src/main/java/com/example/androidndkmd5sign/: MD5Utlis.kt  MainActivity.kt  MyApplication.kt
app/src/main/res/values/: strings.xml
